--- a/notebooks/asignment_3_report.ipynb
+++ b/notebooks/asignment_3_report.ipynb
@@ -219,6 +219,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## EDA and Sampling\n",
+    "in the end of the report"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## ML Deployment\n",
     "\n",
     "### Baseline Model\n",
@@ -433,18 +441,24 @@
     "#### 3. Why Hindroid ?\n",
     "\n",
     "- hindroid is a very intuitive and reasonable approach. From our EDA, we can see the significant difference between Malware and Benign apps with api calls, packages, and blocks. Api calls mainly represents malware may frequently call some api call, and there are some frequently used package with malwares. Also, the code blocks are a good representations of complexity of apps since malware are less complext than benign apps in general.\n",
+    "- hindroid model utilizes those characters of API calls, code blocks, and packages to calculate the similarities between apps by constructing a Heterogeneous Information Network. In specific, AA^T means how many APIs are in common with a pair of apps. APA^T means how many pairs of APIs that uses a common package. ABA^T implies that two apps both called these specific APIs within a block in the code. With the intuitation, we can classify the apps with SVM kernel to make a decision boundary between benign apps and malware apps.\n",
     "\n",
-    "#### 4. Explaination of Approach\n",
+    "#### 4. Explaination of Implementation\n",
+    "\n",
     "- Since there are many and many different api calls, package, blocks in every app, we need to handle the data when it comes large. We are limited with memory, then distributed packages rather than pandas are brought to table: Spark and Dask. In specific, we used dask to handle the task stream of extracting api calls, blocks, etc from smali files, and we used pyspark to do matrix construction since Spark can easily handle the case of adjancency matrix.\n",
     "\n",
-    "- For B and P matrix, we first computted the API x Block matrix and API x Package matrix to reduce the computational cost. Since there are so any different api calls in our dataset, and number of unique block and number of package is much smaller.\n",
+    "- For B and P matrix, we first computted the API x Block matrix and API x Package matrix to reduce the computational cost. And then, we replace the non-zero terms with 1. In this way, since there are so any different api calls in our dataset, the number of unique block and number of package is much smaller.\n",
+    "\n",
+    "- To store the matrices, we stored the adjacency matrices in Coordinate format `scipy.sparse.coo_matrix`. For matrix calculation, we simply uses its built-in dot product. i.e A.dot(B) We store our matrices by the file name `A.npz`, `P.npz`, `B.npz` with a reference folder `ref` containing `api_ref.json` and `app_ref.json` with mapping of which index of the matrix has which values.\n",
+    "\n",
+    "- For SVM, we built own classifier class `hindroid` (in `src.models.hindroid`) with `scikit-learn SVC('precomputed')`\n",
     "\n",
     "#### 5. Experimental Results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -687,40 +701,40 @@
        "      <td>AA</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>274.1</td>\n",
+       "      <td>268.3</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>267.9</td>\n",
+       "      <td>273.7</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>ABA</td>\n",
-       "      <td>0.804758</td>\n",
-       "      <td>0.802768</td>\n",
-       "      <td>220.6</td>\n",
-       "      <td>53.4</td>\n",
-       "      <td>214.5</td>\n",
-       "      <td>53.5</td>\n",
+       "      <td>0.798013</td>\n",
+       "      <td>0.800185</td>\n",
+       "      <td>214.1</td>\n",
+       "      <td>54.1</td>\n",
+       "      <td>219.6</td>\n",
+       "      <td>54.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>APA</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>274.1</td>\n",
+       "      <td>268.3</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>267.9</td>\n",
+       "      <td>273.7</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>APBPA</td>\n",
-       "      <td>0.847725</td>\n",
-       "      <td>0.846310</td>\n",
-       "      <td>231.9</td>\n",
-       "      <td>41.1</td>\n",
-       "      <td>226.8</td>\n",
-       "      <td>42.2</td>\n",
+       "      <td>0.847698</td>\n",
+       "      <td>0.848155</td>\n",
+       "      <td>229.1</td>\n",
+       "      <td>43.1</td>\n",
+       "      <td>230.6</td>\n",
+       "      <td>39.2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -728,10 +742,10 @@
       ],
       "text/plain": [
        "  method        f1       acc     tp    fp     tn    fn\n",
-       "0     AA  1.000000  1.000000  274.1   0.0  267.9   0.0\n",
-       "1    ABA  0.804758  0.802768  220.6  53.4  214.5  53.5\n",
-       "2    APA  1.000000  1.000000  274.1   0.0  267.9   0.0\n",
-       "3  APBPA  0.847725  0.846310  231.9  41.1  226.8  42.2"
+       "0     AA  1.000000  1.000000  268.3   0.0  273.7   0.0\n",
+       "1    ABA  0.798013  0.800185  214.1  54.1  219.6  54.2\n",
+       "2    APA  1.000000  1.000000  268.3   0.0  273.7   0.0\n",
+       "3  APBPA  0.847698  0.848155  229.1  43.1  230.6  39.2"
       ]
      },
      "metadata": {},
@@ -771,42 +785,42 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>AA</td>\n",
-       "      <td>0.971765</td>\n",
-       "      <td>0.972761</td>\n",
-       "      <td>125.9</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>134.8</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>0.962199</td>\n",
+       "      <td>0.961940</td>\n",
+       "      <td>129.9</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>127.9</td>\n",
+       "      <td>6.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>ABA</td>\n",
-       "      <td>0.753844</td>\n",
-       "      <td>0.753358</td>\n",
-       "      <td>101.4</td>\n",
-       "      <td>36.6</td>\n",
-       "      <td>100.5</td>\n",
-       "      <td>29.5</td>\n",
+       "      <td>0.775401</td>\n",
+       "      <td>0.773134</td>\n",
+       "      <td>105.5</td>\n",
+       "      <td>29.6</td>\n",
+       "      <td>101.7</td>\n",
+       "      <td>31.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>APA</td>\n",
-       "      <td>0.942093</td>\n",
-       "      <td>0.943284</td>\n",
-       "      <td>123.8</td>\n",
-       "      <td>8.1</td>\n",
-       "      <td>129.0</td>\n",
-       "      <td>7.1</td>\n",
+       "      <td>0.936985</td>\n",
+       "      <td>0.935448</td>\n",
+       "      <td>128.1</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>122.6</td>\n",
+       "      <td>8.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>APBPA</td>\n",
-       "      <td>0.776086</td>\n",
-       "      <td>0.775373</td>\n",
-       "      <td>104.7</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>103.1</td>\n",
-       "      <td>26.2</td>\n",
+       "      <td>0.776825</td>\n",
+       "      <td>0.770522</td>\n",
+       "      <td>107.0</td>\n",
+       "      <td>31.8</td>\n",
+       "      <td>99.5</td>\n",
+       "      <td>29.7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -814,10 +828,10 @@
       ],
       "text/plain": [
        "  method        f1       acc     tp    fp     tn    fn\n",
-       "0     AA  0.971765  0.972761  125.9   2.3  134.8   5.0\n",
-       "1    ABA  0.753844  0.753358  101.4  36.6  100.5  29.5\n",
-       "2    APA  0.942093  0.943284  123.8   8.1  129.0   7.1\n",
-       "3  APBPA  0.776086  0.775373  104.7  34.0  103.1  26.2"
+       "0     AA  0.962199  0.961940  129.9   3.4  127.9   6.8\n",
+       "1    ABA  0.775401  0.773134  105.5  29.6  101.7  31.2\n",
+       "2    APA  0.936985  0.935448  128.1   8.7  122.6   8.6\n",
+       "3  APBPA  0.776825  0.770522  107.0  31.8   99.5  29.7"
       ]
      },
      "metadata": {},
@@ -834,20 +848,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Observation\n",
-    "\n",
-    "- We notice that the performance will not be higher when the kernal path gets more complicates. That is, a simple AA^T matrix may outperformance every other meta path like APBP^TA^T. Since our benign set is balanced with malware set (same number of targets and same apk in size), our dataset is far away from real datasets. In our cases, the naive AA^T works the best for the fully balanced datasets. \n",
-    "\n",
-    "- The Hindroid approach matches to hindroid paper results except for the methods involves B matrices. In this case, we suggest that the B matrix adds some noise on the Kernel matrix when training since our data set only consists the feature csv files with less than 5MB. As the apk files being smaller, the weights of B will be getting larger, and then the noise of Block will impact the overall performance. We assume that with larger apk files trained into model, the weights of noise of B will be smaller, then the performance will get better. In other words, we make hypothesis that B matrix will benifit the model as apk files in training set getting larger and larger.\n",
-    "\n",
-    "- As the "
+    "###### Design\n",
+    "- We should use F beta score since our goal is to detect Malware, we want a more strict metrics than accuracy for different Precision and Recall demanding. In specific, if user want to be aware of more malwares, then the metrics should be more in favor of Recall: F beta > 1. If user thinks himself or herself will not be easily get malware apps, the metrics should be more in favor of Precision: F beta < 1\n",
+    "- In our report, we try to make the same result to compare to Hindroid paper, so we made the table above. F1 score meant to have a balanced between Recall and Precision."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusion\n",
+    "###### Observation\n",
+    "\n",
+    "- We notice that the performance will not be higher when the kernal path gets more complicates. That is, a simple AA^T matrix may outperformance every other meta path like APBP^TA^T. Since our benign set is balanced with malware set (same number of targets and same apk in size), our dataset is far away from real datasets. In our cases, the naive AA^T works the best for the fully balanced datasets.\n",
+    "\n",
+    "- The Hindroid approach matches to hindroid paper results except for the methods involves B matrices. In this case, we suggest that the B matrix adds some noise on the Kernel matrix when training since our data set only consists the feature csv files with less than 5MB. As the apk files being smaller, the weights of B will be getting larger, and then the noise of Block will impact the overall performance. We assume that with larger apk files trained into model, the weights of noise of B will be smaller, then the performance will get better. In other words, we make hypothesis that B matrix will benifit the model as apk files in training set getting larger and larger."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion & Discussion\n",
     "\n",
     "### Data Ingestion Pipeline\n",
     "\n",
@@ -875,15 +896,25 @@
     "\n",
     "- data ingestion pipeline:\n",
     "    - `I/O cost`, to reduce the I/O cost, we can get the source code of API Tool and twist it into an In-memory decompile tool to make the data ingestion pipleline faster.\n",
+    "    \n",
     "    - `Parallelism`. We may think about switching to command-line own parallalim or other distributed computing library.\n",
     "- feature extraction:\n",
     "    - `I/O cost`, to reduce the I/O cost, we can integrate the feature extraction process in data ingetstion pipeline to do in-memory computing.\n",
+    "    \n",
     "    - `Parallelism`. Using `pyspark` to do dataframe/tabular operation.\n",
     "- model metrics performance:\n",
-    "    - \n",
+    "\n",
+    "    - `Classifier` the paper uses SVM to classify the preprocessed matrices, we can change differernt estimator to try out the results. i.e. We can use some tree-based algorithm like XGBoost to see if the performance will be better.\n",
     "- model computational efficiency:\n",
+    "\n",
     "    - `Training`: Since the computational efficiency for training process is fairly good after switch to spark, we do not have any concern about it so far.\n",
-    "    - `Testing and Validation`: we can also switch our training, validation pipeline into the spark by using packages under spark.mlib. We can make the whole training and testing pipline in Spark."
+    "    \n",
+    "    - `Testing and Validation`: we can also switch our training, validation pipeline into the spark by using packages under spark.mlib. We can make the whole training and testing pipline in Spark.\n",
+    "    \n",
+    "    - `In general`, our implementation tried our best to optimize the process of preprocessing and training by trying different toolkit like Dask, Spark, etc. Downcasting the issue to basic level, the computation is trivial because of large number of unique api calls, packages, and blocks. I encountered different type of memory outrage when I implemented the model. There are different approaches suggested to fix the issue:\n",
+    "    \n",
+    "        - `Trim Down API Calls`, Like pruning a decision tree, trimming the API calls to fixed dictionary, the computational problem of API calls can be solved. It can also prevent the problem of overfitting.\n",
+    "        - `Change Embedding Method`, we can use more highly optimized graph technique to process the algorithm."
    ]
   },
   {
@@ -913,11 +944,11 @@
     "  sheet](http://pages.cpsc.ucalgary.ca/~joel.reardon/mobile/smali-cheat.pdf)\n",
     "  for decompiling Android applications to Smali Code.\n",
     "\n",
-    "## Graph Techniques in Machine Learning\n",
+    "### Graph Techniques in Machine Learning\n",
     "\n",
     "* A (graduate) [survey course](http://web.eecs.umich.edu/~dkoutra/courses/W18_598/) at Michigan on Graph Mining.\n",
     "\n",
-    "## Machine Learning on Source Code\n",
+    "### Machine Learning on Source Code\n",
     "\n",
     "* A\n",
     "  [collection](https://github.com/src-d/awesome-machine-learning-on-source-code)\n",
